--- a/css/styles.css
+++ b/css/styles.css
@@ -1,40 +1,45 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-/*---------------------------------------BUTTON WHATSAPP--------------------------------- */
-.btn-wsp{
-    position:fixed;
-    width:60px;
-    height:50px;
-    line-height: 54px;
-    bottom:25px;
-    right:25px;
-    background-color: #4dc247;
-    color:#FFF;
-    border-radius:50px;
-    text-align:center;
-    font-size:35px;
-    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
-    z-index:100;
-    transition: all 300ms ease;
-    opacity: 1;
-    border-bottom: none;
-}
-.btn-wsp:hover{
-    background: #FFF;
-    color:rgb(156, 4, 98);
-    border: 5px rgb(8, 8, 8)
-}
-@media only screen and (min-width:320px) and (max-width:768px){
-    .btn-wsp{
-        width:50px;
-        height:50px;
-        line-height: 45px;
-	}
-}
-/*---------------------------------------BUTTON WHATSAPP--------------------------------- */
+/*global*/
+* {
+  margin: 0px; }
 
-.cards {
-    border: 1px solid black;
-}
+* {
+  padding: 0px; }
+
+* {
+  box-sizing: border-box; }
+
+* {
+  overflow-x: hidden; }
+
+* {
+  font-family: 'Varta';
+  font-style: normal; }
+
+/*---------------------------------------BUTTON WHATSAPP--------------------------------- */
+.btn-wsp {
+  position: fixed;
+  width: 60px;
+  height: 50px;
+  line-height: 54px;
+  bottom: 25px;
+  right: 25px;
+  background-color: #4dc247;
+  color: #FFF;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 35px;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
+  z-index: 100;
+  transition: all 300ms ease;
+  opacity: 1;
+  border-bottom: none; }
+  .btn-wsp .btn-wsp:hover {
+    background: #FFF;
+    color: #9c0462;
+    border: 5px #080808; }
+
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+  .btn-wsp {
+    width: 50px;
+    height: 50px;
+    line-height: 45px; } }
